--- a/index.html
+++ b/index.html
@@ -9,7 +9,5 @@
 <body>
 
     <h1>On construction...</h1>
-    <img src="" alt="">
-</body>
-
-</html>
+    <img src="https://startbootstrap.github.io/startbootstrap-stylish-portfolio/assets/img/portfolio-1.jpg" alt="">
+</body></html>
